--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = jnu_alarm
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.jnuAlarm
+PRODUCT_BUNDLE_IDENTIFIER = com.rayleigh.JNU-Alarm
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
