--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.0
+  firebase_analytics: ^11.3.5
+  firebase_messaging: ^15.1.5
+  firebase_crashlytics: ^4.1.5
+  firebase_performance: ^0.10.0+10
 
 dev_dependencies:
   flutter_test:
