--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_performance: ^0.10.0+10
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
