--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   json_annotation: ^4.9.0
   shared_preferences: ^2.3.3
   connectivity_plus: ^6.1.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
