--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.3.3
   connectivity_plus: ^6.1.0
   flutter_local_notifications: ^18.0.1
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
