--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   connectivity_plus: ^6.1.0
   flutter_local_notifications: ^18.0.1
   webview_flutter: ^4.10.0
+  http: ^1.2.2
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
