--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   webview_flutter: ^4.10.0
   http: ^1.2.2
   intl: ^0.20.1
+  share_plus: ^10.1.3
 
 dev_dependencies:
   flutter_test:
