--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.20.1
   share_plus: ^10.1.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
