--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.3.1
   sqflite: ^2.4.1
   path: ^1.9.0
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
