--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   package_info_plus: ^8.1.2
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
