--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path: ^1.9.0
   package_info_plus: ^8.1.2
   carousel_slider: ^5.0.0
+  google_mobile_ads: ^5.3.1
 
 dev_dependencies:
   flutter_test:
