--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   package_info_plus: ^8.1.2
   carousel_slider: ^5.0.0
   google_mobile_ads: ^5.3.1
+  html: ^0.15.5
+  flutter_svg: ^2.0.17
 
 dependency_overrides:
   # google_mobile_ads 설치 후 충돌로인해 오버라이드
