--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   google_mobile_ads: ^5.3.1
   html: ^0.15.5
   flutter_svg: ^2.0.17
+  flutter_naver_map: ^1.3.0+1
 
 dependency_overrides:
   # google_mobile_ads 설치 후 충돌로인해 오버라이드
