--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -66,6 +66,8 @@
 	</dict>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-4183402691727093~8596989327</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>관심사에 맞는 콘텐츠와 광고를 제공하고, 부적절한 광고를 제어하는 데에 사용합니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
