--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_naver_map: ^1.3.0+1
   android_intent_plus: ^5.3.0
+  app_tracking_transparency: ^2.0.6+1
 
 dependency_overrides:
   # google_mobile_ads 설치 후 충돌로인해 오버라이드
