--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   shared_preferences: ^2.3.3
-  connectivity_plus: ^6.1.0
+  internet_connection_checker: ^3.0.1
   flutter_local_notifications: ^18.0.1
   webview_flutter: ^4.10.0
   http: ^1.2.2
