--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/img_push_notification.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
