--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>itms-apps</string>
+	</array>
 	<key>GADNativeAdValidatorEnabled</key><false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>나의 위치를 표시하기 위해 위치정보 권한이 필요합니다.</string>
